# ChronoSketch_AI

./: .gitignore  LICENSE  PROJECT_MAP.md  README.md  debug_phase1.py  debug_phase2.py  debug_phase2_output.txt  debug_phase3.py  debug_phase3_output.txt  debug_phase4.py  debug_phase4_output.txt  pyproject.toml
src/: main.py
src/brain/: orchestrator.py  schemas.py
src/director/: assembler.py
src/ear/: transcriber.py
src/hand/: layout.py  renderer.py  texture.py  tracer.py
src/shared/: config.py  logger.py  models.py
tests/: test_brain.py  test_director.py  test_ear.py  test_hand.py  test_library.py
